--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -54,7 +54,7 @@
 
 \twolineshloka
 {रामस्य माता कौसल्या कैकेयी भरतस्य तु}
-{सुतौ लक्ष्मणशत्रुघ्नौ सुमित्रायाः परंतपौ}
+{सुतौ लक्ष्मणशत्रुघ्नौ सुमित्रायाः परन्तपौ}
 
 
 \twolineshloka
@@ -69,7 +69,7 @@
 
 \twolineshloka
 {पितामहो रावणस्य साक्षाद्देवः प्रजापतिः}
-{स्वयंभूः सर्वलोकानां प्रभुः स्रष्टा महातपाः}
+{स्वयभूः सर्वलोकानां प्रभुः स्रष्टा महातपाः}
 
 
 \twolineshloka
@@ -99,7 +99,7 @@
 
 \twolineshloka
 {विमानं पुष्पकं नाम कामगं च ददौ प्रभुः}
-{यक्षाणामाधिपत्यंच राजराजत्वमेव च}
+{यक्षाणामाधिपत्यञ्च राजराजत्वमेव च}
 
 
 \sect{अध्यायः २७६}
@@ -122,12 +122,12 @@
 
 
 \twolineshloka
-{ताः सदा तं महात्मानं संतोषयितुमुद्यताः}
+{ताः सदा तं महात्मानं सन्तोषयितुमुद्यताः}
 {ऋषिं भरतशार्दूल नृत्यगीतविशारदाः}
 
 
 \twolineshloka
-{पुष्पोत्कटा च राका च मालिनी च विशांपते}
+{पुष्पोत्कटा च राका च मालिनी च विशापते}
 {अन्योन्यस्पर्धयाराजञ्श्रेयस्कामाः सुमध्यमाः}
 
 
@@ -232,7 +232,7 @@
 
 \twolineshloka
 {गन्धर्वदेवासुरतो यक्षराक्षसतस्तथा}
-{सर्पकिंनरभूतेभ्यो न मे भूयात्पराभवः}
+{सर्पकिन्नरभूतेभ्यो न मे भूयात्पराभवः}
 
 \uvacha{ब्रह्मोवाच}
 
@@ -277,13 +277,13 @@
 
 
 \twolineshloka
-{राक्षसस्तु वरंलब्ध्वा दशग्रीवो विशांपते}
+{राक्षसस्तु वरंलब्ध्वा दशग्रीवो विशापते}
 {लङ्कायाश्च्यावयामास युधि जित्वा धनेश्वरम्}
 
 
 \twolineshloka
 {हित्वास भगवाँल्लङ्कामाविशद्गन्धमादनम्}
-{गन्धर्वयक्षानुगतो रक्षःकिंपुरुषैः सह}
+{गन्धर्वयक्षानुगतो रक्षःकिपुरुषैः सह}
 
 
 \twolineshloka
@@ -293,7 +293,7 @@
 
 \twolineshloka
 {यस्तु त्वां समरे हन्ता तमेवैतद्वहिष्यति}
-{अवमत्य गुरुं मां च क्षिप्रं त्वंनभविष्यसि}
+{अवमत्य गुरुं मां च क्षिप्रं त्वन्न भविष्यसि}
 
 
 \twolineshloka
@@ -313,7 +313,7 @@
 
 \twolineshloka
 {दशग्रीवश्चदैत्यानां दानवानां बलोत्कटः}
-{आक्रम्य रत्नान्यहरत्कामरूपी विहंगम}
+{आक्रम्य रत्नान्यहरत्कामरूपी विहङ्गम}
 
 
 \twolineshloka
@@ -322,9 +322,8 @@
 
 
 \sect{अध्यायः २७७}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -359,8 +358,8 @@
 
 
 \twolineshloka
-{पितामहस्ततस्तेषां संनिधौ शक्रमब्रवीत्}
-{सर्वैर्देवगणैः सार्धं संभव त्वं महीतले}
+{पितामहस्ततस्तेषां सन्निधौ शक्रमब्रवीत्}
+{सर्वैर्देवगणैः सार्धं सभव त्वं महीतले}
 
 
 \twolineshloka
@@ -426,14 +425,12 @@
 
 \twolineshloka
 {सा तद्वच समाज्ञाय तथा चक्रे मनोजवा}
-{इतश्चेतश्च गच्छन्ती वैरसंधुक्षणे रता}
+{इतश्चेतश्च गच्छन्ती वैरसन्धुक्षणे रता}
 
 
 \sect{अध्यायः २७८}
-\twolineshloka
-{युधिष्ठिर उवाच}
-{}
 
+\uvacha{युधिष्ठिर उवाच}
 
 \twolineshloka
 {उक्तं भगवता जन्म रामादीनां पृथक्पृथक्}
@@ -458,7 +455,7 @@
 
 
 \twolineshloka
-{चरितब्रह्मचर्यास्ते कृतदाराश्च पार्तिव}
+{चरितब्रह्मचर्यास्ते कृतदाराश्च पार्थिव}
 {दृष्ट्वा रामं दशरथः प्रीतिमानभवत्सुखी}
 
 
@@ -499,7 +496,7 @@
 
 \twolineshloka
 {पुत्रं राजा दशरथः कौसल्यानन्दवर्धनम्}
-{संदृश्यपरमां प्रीतिमगच्छत्कुलनन्दनम्}
+{सन्दृश्यपरमां प्रीतिमगच्छत्कुलनन्दनम्}
 
 
 \twolineshloka
@@ -509,7 +506,7 @@
 
 \twolineshloka
 {अद् पुष्यो निशि ब्रह्मन्पुण्यं योगमुपैष्यति}
-{संभाराः संभ्रियन्तां मे रामश्चोपनिमन्त्र्यताम्}
+{सभाराः सभ्रियन्तां मे रामश्चोपनिमन्त्र्यताम्}
 
 
 \twolineshloka
@@ -524,7 +521,7 @@
 
 \twolineshloka
 {अद्य कैकेयि दौर्भाग्यं राज्ञा ते ख्यापितं महत्}
-{आशीविषस्त्वां संक्रुद्धश्छन्नो दशति दुर्भगे}
+{आशीविषस्त्वां सङ्क्रुद्धश्छन्नो दशति दुर्भगे}
 
 
 \twolineshloka
@@ -544,7 +541,7 @@
 
 \threelineshloka
 {सत्यप्रतिज्ञ यन्मे त्वं काममेकं विसृष्टवान्}
-{उपाकुरुष्व तद्राजंस्तस्मान्मुञ्चस्व संकटात्}
+{उपाकुरुष्व तद्राजंस्तस्मान्मुञ्चस्व सङ्कटात्}
 {तदद्य कुरु सत्यं मे वरं वरद भूपते}
 
 \uvacha{राजोवाच}
@@ -552,17 +549,17 @@
 
 \twolineshloka
 {वरं ददानि ते हन्त तद्गृहाण यदिच्छसि}
-{अवध्यो वध्यतां कोद्य वध्यः कोऽद्य विमुच्यतां}
+{अवध्यो वध्यतां कोद्य वध्यः कोऽद्य विमुच्यताम्}
 
 
 \twolineshloka
 {धनं ददानि कस्याद् ह्रियतां कस्यरवापुनः}
-{ब्राह्मणस्वादिहान्यत्रयत्किंचिद्वित्तमस्ति मे}
+{ब्राह्मणस्वादिहान्यत्रयत्किञ्चिद्वित्तमस्ति मे}
 
 
 \twolineshloka
 {पृथिव्यां राजराजोस्मि चातुर्वर्ण्यस् रिता}
-{यस्तेऽभिलपितः कामो ब्रूहि कल्याणि माचिरं}
+{यस्तेऽभिलपितः कामो ब्रूहि कल्याणि माचिरम्}
 
 
 \twolineshloka
@@ -582,7 +579,7 @@
 
 \twolineshloka
 {स तं राजा वरं श्रुत्वा विप्रियं दारुणोदयम्}
-{दुःखार्तो भरतश्रेष्ठ न किंचिद्व्याजहार ह}
+{दुःखार्तो भरतश्रेष्ठ न किञ्चिद्व्याजहार ह}
 
 
 \twolineshloka
@@ -637,7 +634,7 @@
 
 \twolineshloka
 {ददर्श चित्रकूटस्थं स रामं सहलक्ष्मणम्}
-{तापसानामलंकारं धारयन्तं धनुर्धरम्}
+{तापसानामलङ्कारं धारयन्तं धनुर्धरम्}
 
 
 \twolineshloka
@@ -654,7 +651,7 @@
 
 \threelineshloka
 {अब्रवीत्स तदारामो भ्रातरं भ्रातृवत्सलम्}
-{पादुके मे भविष्येते राज्यगोप्त्र्यौ परंतप}
+{पादुके मे भविष्येते राज्यगोप्त्र्यौ परन्तप}
 {एवमस्त्विति तं प्राह भरतः प्रणतस्तदा}
 
 
@@ -754,13 +751,12 @@
 
 
 \sect{अध्यायः २७९}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
-{मारीचस्त्वथ संभ्रान्तो दृष्ट्वा रावणमागतम्}
+{मारीचस्त्वथ सभ्रान्तो दृष्ट्वा रावणमागतम्}
 {पूजयामास सत्कारैः फलमूलादिभिस्ततः}
 
 
@@ -906,7 +902,7 @@
 
 
 \twolineshloka
-{स रामस्य पदंगृह्य प्रससार धनुर्धरः}
+{स रामस्य पदं गृह्य प्रससार धनुर्धरः}
 {अवीक्षमाणो विम्बोष्ठीं प्रययौ लक्ष्मणस्तदा}
 
 
@@ -921,7 +917,7 @@
 
 
 \twolineshloka
-{सा तमालक्ष्यसंप्राप्तं धर्मज्ञा जनकात्मजा}
+{सा तमालक्ष्यसप्राप्तं धर्मज्ञा जनकात्मजा}
 {निमन्त्रयामास तदा फलमूलाशनादिभिः}
 
 
@@ -983,14 +979,13 @@
 
 
 \sect{अध्यायः २८०}
-\twolineshloka
-{गार्कण्डेय उवाच}
-{}
+
+\uvacha{गार्कण्डेय उवाच}
 
 
 \twolineshloka
 {सखा दशरथस्यासीज्जटायुररुणात्मजः}
-{गृध्रराजो महावीरः संपातिर्यस् सोदरः}
+{गृध्रराजो महावीरः सपातिर्यस् सोदरः}
 
 
 \twolineshloka
@@ -1044,7 +1039,7 @@
 
 
 \twolineshloka
-{प्राकारवप्रसंबाधां निर्मितां विश्वकर्मणा}
+{प्राकारवप्रसबाधां निर्मितां विश्वकर्मणा}
 {प्रविवेशपुरीं लङ्कां ससीतो राक्षसेश्वरः}
 
 
@@ -1089,7 +1084,7 @@
 
 
 \twolineshloka
-{तस्य तद्वचनं श्रुत्वा संगृह्य धनुषी शुभे}
+{तस्य तद्वचनं श्रुत्वा सङ्गृह्य धनुषी शुभे}
 {कोयं पितरमस्माकं नाम्नाऽऽहेत्यूचतुश्च तौ}
 
 
@@ -1110,12 +1105,12 @@
 
 \twolineshloka
 {ततो दृष्ट्वाऽऽश्रमपदं व्यपविद्धबृसीकटम्}
-{विध्वस्तकलशं शून्यं गोमायुशतसंकुलम्}
+{विध्वस्तकलशं शून्यं गोमायुशतसङ्कुलम्}
 
 
 \twolineshloka
 {दुःखशोकसमाविष्टौ वैदेहीहरणार्दितौ}
-{जग्मतुर्दण्डकारण्यं दक्षिणेन परंतपौ}
+{जग्मतुर्दण्डकारण्यं दक्षिणेन परन्तपौ}
 
 
 \twolineshloka
@@ -1129,7 +1124,7 @@
 
 
 \twolineshloka
-{मेघपर्वतसंकाशं सालस्कन्धं महाभूजम्}
+{मेघपर्वतसङ्काशं सालस्कन्धं महाभूजम्}
 {उरोगतविशालाक्षं महोदरमहामुखम्}
 
 
@@ -1139,7 +1134,7 @@
 
 
 \twolineshloka
-{स राममभिसंप्रेक्ष्य कृष्यते येन तन्मुखम्}
+{स राममभिसप्रेक्ष्य कृष्यते येन तन्मुखम्}
 {विषण्णश्चाब्रवीद्रामं पश्यावस्थामिमां मम}
 
 
@@ -1160,7 +1155,7 @@
 
 \twolineshloka
 {एवं बहुविधं धीमान्विललाप स लक्ष्मणः}
-{तमुवाचाथकाकुत्स्थः संभ्रमेष्वप्यसंभ्रमः}
+{तमुवाचाथकाकुत्स्थः सभ्रमेष्वप्यसभ्रमः}
 
 
 \threelineshloka
@@ -1176,7 +1171,7 @@
 
 \twolineshloka
 {ततोऽस्य दक्षिणं बाहुं स्वङ्गेनाजघ्निवान्बली}
-{सौमित्रिरपि संप्रेक्ष्यभ्रातरं राघवं स्थितम्}
+{सौमित्रिरपि सप्रेक्ष्यभ्रातरं राघवं स्थितम्}
 
 
 \twolineshloka
@@ -1200,13 +1195,13 @@
 
 
 \twolineshloka
-{रावणेन हृतासीता लङ्कायां संनिवेशिता}
+{रावणेन हृतासीता लङ्कायां सन्निवेशिता}
 {सुग्रीवमभिगच्छस्वस ते साह्यं करिष्यति}
 
 
 \twolineshloka
 {एषा पम्पा शिवजला हंसकारण्डवायुता}
-{ऋश्यमूकस्य शैलस्य संनिकर्षे तटाकिनी}
+{ऋश्यमूकस्य शैलस्य सन्निकर्षे तटाकिनी}
 
 
 \twolineshloka
@@ -1215,7 +1210,7 @@
 
 
 \twolineshloka
-{तेन त्वं सहसंगम्य दुःखमूलं निवेदय}
+{तेन त्वं सहसङ्गम्य दुःखमूलं निवेदय}
 {समानशीलो भवतः साहाय्यं स करिष्यति}
 
 
@@ -1230,9 +1225,8 @@
 
 
 \sect{अध्यायः २८१}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -1247,7 +1241,7 @@
 
 \twolineshloka
 {विललाप सराजेन्द्रस्तत्रकान्तानुस्मरन्}
-{कामबाणाभिसंतप्तं सौमित्रिस्तमथाब्रवीत्}
+{कामबाणाभिसन्तप्तं सौमित्रिस्तमथाब्रवीत्}
 
 
 \twolineshloka
@@ -1286,7 +1280,7 @@
 
 
 \twolineshloka
-{तेन संभाष्य पूर्वं तौ सुग्रीवमभिजग्मतुः}
+{तेन सभाष्य पूर्वं तौ सुग्रीवमभिजग्मतुः}
 {रसख्यं वानरराजेन चक्रे रामस्तदा नृप}
 
 
@@ -1372,7 +1366,7 @@
 
 \twolineshloka
 {असकृत्त्वं मया क्लीव निर्जितो जीवितप्रियः}
-{मुक्तो गच्छसि दुर्बुद्धे कथंकारं रणे पुनः}
+{मुक्तो गच्छसि दुर्बुद्धे कथङ्कारं रणे पुनः}
 
 
 \twolineshloka
@@ -1511,7 +1505,7 @@
 
 
 \twolineshloka
-{सीते वक्ष्यामि ते किंचिद्विश्वासं करु मे सखि}
+{सीते वक्ष्यामि ते किञ्चिद्विश्वासं करु मे सखि}
 {भयं त्वं त्यज वामोरु शृणु चेदं वचो मम}
 
 
@@ -1611,14 +1605,13 @@
 
 
 \sect{अध्यायः २८२}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
 {ततस्तां भर्तृशोकार्तां दीनां मलिनवाससम्}
-{मणिशेषाभ्यलंकारां रुदतीं च पतिव्रताम्}
+{मणिशेषाभ्यलङ्कारां रुदतीं च पतिव्रताम्}
 
 
 \twolineshloka
@@ -1627,7 +1620,7 @@
 
 
 \twolineshloka
-{देवदानवगन्धर्वयक्षकिंपुरुषैर्युधि}
+{देवदानवगन्धर्वयक्षकिपुरुषैर्युधि}
 {अजितोशोकवनिकां ययौ कन्दर्पपीडितः}
 
 
@@ -1638,7 +1631,7 @@
 
 \twolineshloka
 {न कल्पवृक्षसदृशोयत्नादपि विभूषितः}
-{श्मशानचैत्यद्रुमवद्भूषितोऽपि भयंकरः}
+{श्मशानचैत्यद्रुमवद्भूषितोऽपि भयङ्करः}
 
 
 \twolineshloka
@@ -1708,7 +1701,7 @@
 
 
 \twolineshloka
-{व्यवस्थाप्यकथंचित्सा विषादादतिमोहिता}
+{व्यवस्थाप्यकथञ्चित्सा विषादादतिमोहिता}
 {उवाच वाक्यं तं क्षुद्रं वैदेही पतिदेवता}
 
 
@@ -1750,11 +1743,11 @@
 
 \twolineshloka
 {काममङ्गनि मे सीते दुनोतु मकरध्वजः}
-{नत्वामकामां सुश्रोणीं समेप्ये चारुहासिनीं}
+{नत्वामकामां सुश्रोणीं समेप्ये चारुहासिनीम्}
 
 
 \twolineshloka
-{किंनु शक्यं मया कर्तुं यत्त्वमद्यापिमानुषम्}
+{किन्नु शक्यं मया कर्तुं यत्त्वमद्यापिमानुषम्}
 {आहारभूतमस्माकं राममेवानुरुध्यसे}
 
 
@@ -1764,14 +1757,13 @@
 
 
 \twolineshloka
-{राक्षसीभिः परिवृतावैदेही शोककशिंता}
+{राक्षसीभिः परिवृतावैदेही शोककशिन्ता}
 {सेव्यमाना त्रिजटया तत्रैव न्यवसत्तदा}
 
 
 \sect{अध्यायः २८३}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -1795,7 +1787,7 @@
 
 
 \twolineshloka
-{गच्छ लक्ष्मण जानीहि किष्किंदायां कपीश्वरम्}
+{गच्छ लक्ष्मण जानीहि किष्किन्दायां कपीश्वरम्}
 {प्रमत्तं ग्राम्यधर्मेषु कृतघ्नं स्वार्थपण्डितम्}
 
 
@@ -1811,7 +1803,7 @@
 
 \twolineshloka
 {कृतघ्नं तमहं मन्ये वानरापशदं भुवि}
-{यो मामेवंगतो मूढो न जानीतेऽद्य लक्ष्मण}
+{यो मामेवङ्गतो मूढो न जानीतेऽद्य लक्ष्मण}
 
 
 \twolineshloka
@@ -1961,7 +1953,7 @@
 
 \twolineshloka
 {विचित्य दक्षिणामाशां सपर्वतवनाकराम्}
-{श्रान्ताः काले व्यतीते स्म दृष्टवन्तो महागुहां}
+{श्रान्ताः काले व्यतीते स्म दृष्टवन्तो महागुहाम्}
 
 
 \twolineshloka
@@ -2000,7 +1992,7 @@
 
 
 \twolineshloka
-{तत्रानशनसंकल्पं कृत्वाऽऽसीना वयं तदा}
+{तत्रानशनसङ्कल्पं कृत्वाऽऽसीना वयं तदा}
 {ततः कथान्ते गृध्रस्य जटायोरभवत्कथा}
 
 
@@ -2015,7 +2007,7 @@
 
 
 \twolineshloka
-{संपातिर्नाम तस्याहं ज्येष्ठो भ्राता खगाधिपः}
+{सपातिर्नाम तस्याहं ज्येष्ठो भ्राता खगाधिपः}
 {अन्योन्यस्पर्धया रूढावावामदित्यसत्पदम्}
 
 
@@ -2031,12 +2023,12 @@
 
 \twolineshloka
 {तस्यैवं वदतोऽस्माभिर्हतो भ्राता निवेदितः}
-{व्यसनं भवतश्चेदं संक्षेपाद्वै निवेदितम्}
+{व्यसनं भवतश्चेदं सङ्क्षेपाद्वै निवेदितम्}
 
 
 \twolineshloka
 {स सम्पातिस्तदा राजञ्श्रुत्वासुमहदप्रियम्}
-{विषण्णचेताः पप्रच्छ पुनरस्मानरिंदम}
+{विषण्णचेताः पप्रच्छ पुनरस्मानरिन्दम}
 
 
 \twolineshloka
@@ -2061,12 +2053,12 @@
 
 \twolineshloka
 {इतितस्य वचः श्रुत्वा वयमुत्थाय सत्वराः}
-{सागरक्रमणे मन्त्रं मन्त्रयामः परंतप}
+{सागरक्रमणे मन्त्रं मन्त्रयामः परन्तप}
 
 
 \threelineshloka
 {नाध्यवास्यद्यदा कश्चित्सागरस्य विलङ्घनम्}
-{ततः पितरमाविश्य पुप्लुवेऽहंमहार्णवम्}
+{ततः पितरमाविश्य पुप्लुवेऽहमहार्णवम्}
 {शतयोजनविस्तीर्णं निहत्य जलराक्षसीम्}
 
 
@@ -2091,7 +2083,7 @@
 
 
 \twolineshloka
-{कुशलंत्वाब्रवीद्रामःसीते सौमित्रिणा सह}
+{कुशलन्त्वाब्रवीद्रामःसीते सौमित्रिणा सह}
 {सखिभावाच् सुग्रीवः कुशलं त्वाऽनुपृच्छति}
 
 
@@ -2106,7 +2098,7 @@
 
 
 \twolineshloka
-{अविन्ध्यो हि महाबाहो राक्षसो वृद्धसंमतः}
+{अविन्ध्यो हि महाबाहो राक्षसो वृद्धसमतः}
 {कथितस्तेन सुग्रीवस्त्वद्विधैः सचिवैर्वृतः}
 
 
@@ -2127,13 +2119,12 @@
 
 \twolineshloka
 {ग्राहयित्वाऽहमात्मानं ततो दग्ध्वाच तां पुरीम्}
-{संप्राप्त इतितं रामः प्रियवादिनमार्चयत्}
+{सप्राप्त इतितं रामः प्रियवादिनमार्चयत्}
 
 
 \sect{अध्यायः २८४}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -2242,7 +2233,7 @@
 
 
 \twolineshloka
-{द्वितीयसागरनिमं तद्बलंबहुलध्वजम्}
+{द्वितीयसागरनिमं तद्बलबहुलध्वजम्}
 {वेलावनं समासाद् निवासमकरोत्तदा}
 
 
@@ -2324,7 +2315,7 @@
 
 
 \twolineshloka
-{इत्येवंब्रुवतः श्रुत्वारामस्य वरुणालयः}
+{इत्येवब्रुवतः श्रुत्वारामस्य वरुणालयः}
 {उवाचव्यथितोवाक्यमितिबद्धाञ्जलिःस्थितः}
 
 
@@ -2339,7 +2330,7 @@
 
 
 \twolineshloka
-{अस्तित्वत्रनलो नाम वानरः शिल्पिसंमतः}
+{अस्तित्वत्रनलो नाम वानरः शिल्पिसमतः}
 {त्वष्टुः काकुत्स्थ तनयो बलवान्विश्वकर्मणः}
 
 
@@ -2360,7 +2351,7 @@
 
 \twolineshloka
 {नलसेतुरिति ख्यातो योऽद्यापि प्रथितो भुवि}
-{रामस्याज्ञां पुरस्कृत्य धार्यते गिरिसंनिभः}
+{रामस्याज्ञां पुरस्कृत्य धार्यते गिरिसन्निभः}
 
 
 \twolineshloka
@@ -2409,9 +2400,8 @@
 
 
 \sect{अध्यायः २८५}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -2456,7 +2446,7 @@
 
 \twolineshloka
 {ससमासाद्य पौलस्त्यममात्यैरभिसंवृतम्}
-{रामसंदेशमामन्त्र्य वाग्मी वक्तुं प्रचक्रमे}
+{रामसन्देशमामन्त्र्य वाग्मी वक्तुं प्रचक्रमे}
 
 
 \threelineshloka
@@ -2477,12 +2467,12 @@
 
 \twolineshloka
 {ये त्वया बलदर्पाभ्यामाविष्टेन वनेचराः}
-{ऋषयोहिंसिताः पूर्वंदेवाश्चाप्यवमानिताः}
+{ऋषयोहिंसिताः पूर्वन्देवाश्चाप्यवमानिताः}
 
 
 \twolineshloka
 {राजर्षयश्च निहता रुदत्यश्चाहृताः स्त्रियः}
-{तदिदं समनुप्राप्तं फलंतस्यानयस्य ते}
+{तदिदं समनुप्राप्तं फलन्तस्यानयस्य ते}
 
 
 \twolineshloka
@@ -2492,7 +2482,7 @@
 
 \twolineshloka
 {मुच्यतां जानकी सीता न मे मोक्ष्यमसि कर्हिचित्}
-{अराक्षसमिमं लोकंकर्ताऽस्मि निशितैः शरैः}
+{अराक्षसमिमं लोकङ्कर्ताऽस्मि निशितैः शरैः}
 
 
 \twolineshloka
@@ -2512,7 +2502,7 @@
 
 \twolineshloka
 {वेगेनोत्पततस्तस्य पेतुस्ते रजनीचराः}
-{भुवि संभिन्नहृदयाः प्रहारवरपीडिताः}
+{भुवि सभिन्नहृदयाः प्रहारवरपीडिताः}
 
 
 \twolineshloka
@@ -2621,9 +2611,8 @@
 
 
 \sect{अध्यायः २८६}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -2648,7 +2637,7 @@
 
 \twolineshloka
 {अमृष्यमाणः सबलो रावणो निर्ययावथ}
-{राक्षसानां बलैर्घोरैः पिशाचानांच संवृतः}
+{राक्षसानां बलैर्घोरैः पिशाचानाञ्च संवृतः}
 
 
 \twolineshloka
@@ -2677,7 +2666,7 @@
 
 
 \twolineshloka
-{स संप्रहारो ववृधे भीरूणां भयवर्धनः}
+{स सप्रहारो ववृधे भीरूणां भयवर्धनः}
 {रोमसंहर्षणो घोरः पुरा देवासुरे यथा}
 
 
@@ -2702,9 +2691,8 @@
 
 
 \sect{अध्यायः २८७}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -2744,7 +2732,7 @@
 
 \twolineshloka
 {तं दृष्ट्वाऽवस्थितं सङ्ख्ये हरयः पवनात्मजम्}
-{महत्या त्वरया राजत्संन्यवर्तन्त सर्वशः}
+{महत्या त्वरया राजत्सन्न्यवर्तन्त सर्वशः}
 
 
 \twolineshloka
@@ -2753,7 +2741,7 @@
 
 
 \twolineshloka
-{तस्मिन्प्रवृत्ते संग्रामे घोरे रुधिरकर्दमे}
+{तस्मिन्प्रवृत्ते सङ्ग्रामे घोरे रुधिरकर्दमे}
 {क्षूम्राक्षः कपिसैन्यं तद्द्रावयामास पत्रिभिः}
 
 
@@ -2764,7 +2752,7 @@
 
 \twolineshloka
 {तयोर्युद्धमभूदधोरं हरिराक्षसवीरयोः}
-{जीगीषतोर्युधाऽन्योन्यमिन्द्रप्रह्लादयोरिवं}
+{जीगीषतोर्युधाऽन्योन्यमिन्द्रप्रह्लादयोरिवम्}
 
 
 \twolineshloka
@@ -2784,7 +2772,7 @@
 
 \twolineshloka
 {ते वध्यमाना हरिभिर्बलिभिर्जितकाशिभिः}
-{राक्षसा भग्नसंकल्पा लङ्कामभ्यपतन्भयात्}
+{राक्षसा भग्नसङ्कल्पा लङ्कामभ्यपतन्भयात्}
 
 
 \twolineshloka
@@ -2835,7 +2823,7 @@
 
 \twolineshloka
 {सदंशितोऽभिनिर्याहि त्वमद्य बलिनांवर}
-{रामादीन्समरे सर्वाञ्जहि शत्रूनरिंदम}
+{रामादीन्समरे सर्वाञ्जहि शत्रूनरिन्दम}
 
 
 \twolineshloka
@@ -2845,7 +2833,7 @@
 
 \twolineshloka
 {इत्युक्त्वा राक्षुसपतिः कुम्भकर्णं तरस्विनम्}
-{संदिदेशेतिकर्तव्ये वज्रवेगप्रमाथिनौ}
+{सन्दिदेशेतिकर्तव्ये वज्रवेगप्रमाथिनौ}
 
 
 \twolineshloka
@@ -2854,9 +2842,8 @@
 
 
 \sect{अध्यायः २८८}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -2880,7 +2867,7 @@
 
 
 \twolineshloka
-{बहुधा युध्यमानास्ते युद्धमार्गैः प्लवंगमाः}
+{बहुधा युध्यमानास्ते युद्धमार्गैः प्लवङ्गमाः}
 {नानाप्रहरणैर्भीमै राक्षसेन्द्रमताडयन्}
 
 
@@ -2960,17 +2947,17 @@
 
 
 \twolineshloka
-{तं दृष्ट्वा वृत्रसंकाशं कुम्भकर्णं तरस्विनम्}
+{तं दृष्ट्वा वृत्रसङ्काशं कुम्भकर्णं तरस्विनम्}
 {गतासुं पतितं भूमौ राक्षसाः प्राद्रवन्भयात्}
 
 
 \twolineshloka
 {तथातान्द्रवतो योधान्दृष्ट्वा तौ दूषणानुजौ}
-{अवस्थाप्याथ सौमित्रिं संक्रुद्धावभ्यधावताम्}
+{अवस्थाप्याथ सौमित्रिं सङ्क्रुद्धावभ्यधावताम्}
 
 
 \twolineshloka
-{तावाद्रवन्तौ संक्रुद्धौ वज्रवेगप्रमाथिनौ}
+{तावाद्रवन्तौ सङ्क्रुद्धौ वज्रवेगप्रमाथिनौ}
 {अभिजग्राह सौमित्रिर्विनद्योभौ पतत्रिभिः}
 
 
@@ -2981,12 +2968,12 @@
 
 \twolineshloka
 {महता शरवर्षेण राक्षसौ सोऽभ्यवर्पत}
-{तं चापिवीरौ संक्रुद्धावुभौ तौ समवर्षताम्}
+{तं चापिवीरौ सङ्क्रुद्धावुभौ तौ समवर्षताम्}
 
 
 \twolineshloka
 {मुहूर्तमेवमभवद्वज्रवेगप्रमाथिनोः}
-{सौमित्रेश्च महाबाहोः संप्रहारः सुदारुणः}
+{सौमित्रेश्च महाबाहोः सप्रहारः सुदारुणः}
 
 
 \twolineshloka
@@ -3000,7 +2987,7 @@
 
 
 \twolineshloka
-{ततः प्रावर्तत पुनः संग्रामः कटुकोदयः}
+{ततः प्रावर्तत पुनः सङ्ग्रामः कटुकोदयः}
 {रामरावणसैन्यानामन्योन्यमभिधावताम्}
 
 
@@ -3010,9 +2997,8 @@
 
 
 \sect{अध्यायः २८९}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -3091,7 +3077,7 @@
 
 
 \twolineshloka
-{तस्येन्द्रजिदसंभ्रान्तः प्रासेनोरसि वीर्यवान्}
+{तस्येन्द्रजिदसभ्रान्तः प्रासेनोरसि वीर्यवान्}
 {प्रहर्तुमैच्छत्तं चास्य प्रासं चिच्छेद लक्ष्मणः}
 
 
@@ -3151,9 +3137,8 @@
 
 
 \sect{अध्यायः २९०}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -3187,7 +3172,7 @@
 
 
 \twolineshloka
-{तौ लब्धसंज्ञौ नृवरौ विशल्यावुदतिष्ठताम्}
+{तौ लब्धसञ्ज्ञौ नृवरौ विशल्यावुदतिष्ठताम्}
 {उभौ गतक्लमौ चास्तां णेनैतौ महारथौ}
 
 
@@ -3198,12 +3183,12 @@
 
 \twolineshloka
 {अयमम्भो गृहीत्वातु राजराजस् शासनात्}
-{गुह्कोऽभ्यागतः श्लेतात्त्वत्सकाशमरिंदम}
+{गुह्कोऽभ्यागतः श्लेतात्त्वत्सकाशमरिन्दम}
 
 
 \twolineshloka
 {इदमम्भः कुबेरस्ते महाराज प्रयच्छति}
-{अन्तर्हितानां भूतानां दर्शनार्थं परंतप}
+{अन्तर्हितानां भूतानां दर्शनार्थं परन्तप}
 
 
 \twolineshloka
@@ -3232,13 +3217,13 @@
 
 
 \twolineshloka
-{तमागतं तु संक्रुद्धं पुनरेव युयुत्सया}
+{तमागतं तु सङ्क्रुद्धं पुनरेव युयुत्सया}
 {अभिदुद्राव सौमित्रिर्विभीषणमते स्थितः}
 
 
 \twolineshloka
 {अकृताह्निकमेवैनं जिघांसुर्जितकाशिनम्}
-{शरैर्जघान संक्रुद्धः कृतसंज्ञोऽथ लक्ष्मणः}
+{शरैर्जघान सङ्क्रुद्धः कृतसञ्ज्ञोऽथ लक्ष्मणः}
 
 
 \twolineshloka
@@ -3288,7 +3273,7 @@
 
 \threelineshloka
 {ददर्श रावणस्तं च रथं पुत्रविनाकृतम्}
-{स पुत्रं निहतं श्रुत्वा त्रासात्संभ्रान्तमानसः}
+{स पुत्रं निहतं श्रुत्वा त्रासात्सभ्रान्तमानसः}
 {}
 
 
@@ -3299,7 +3284,7 @@
 
 \twolineshloka
 {तं दृष्ट्वातस्य दुर्बुद्देरविन्ध्यः पापनिश्चयम्}
-{शमयामास संक्रुद्धं श्रूयतां येन हेतुना}
+{शमयामास सङ्क्रुद्धं श्रूयतां येन हेतुना}
 
 
 \twolineshloka
@@ -3328,9 +3313,8 @@
 
 
 \sect{अध्यायः २९१}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -3344,13 +3328,13 @@
 
 
 \twolineshloka
-{तमाद्रवन्तं संक्रुद्ध मैन्दनीलनलाङ्गदाः}
+{तमाद्रवन्तं सङ्क्रुद्ध मैन्दनीलनलाङ्गदाः}
 {हनुमाञ्जाम्बवांश्चैव ससैन्याः पर्यवारयन्}
 
 
 \twolineshloka
 {ते दशग्रीवसैन्यं तदृक्षवानरपुङ्गवाः}
-{द्रुमैर्विध्वंसयांचक्रुर्दशग्रीवस्य पश्यतः}
+{द्रुमैर्विध्वंसयाञ्चक्रुर्दशग्रीवस्य पश्यतः}
 
 
 \twolineshloka
@@ -3380,7 +3364,7 @@
 
 \twolineshloka
 {तां दृष्ट्वाराक्षसेन्द्रस् मायामिक्ष्वाकुनन्दनः}
-{उवाच रामः सौमित्रिमसंभ्रान्तो बृहद्वचः}
+{उवाच रामः सौमित्रिमसभ्रान्तो बृहद्वचः}
 
 
 \twolineshloka
@@ -3397,7 +3381,7 @@
 
 \twolineshloka
 {अयं हर्यश्वयुग्जैत्रो मघोनः स्यन्दनोत्तमः}
-{त्वदर्थमिह संप्राप्तः संदेशाद्वै शतक्रतोः}
+{त्वदर्थमिह सप्राप्तः सन्देशाद्वै शतक्रतोः}
 
 
 \twolineshloka
@@ -3472,7 +3456,7 @@
 
 \twolineshloka
 {अल्पावशेषमायुश्च ततोऽमन्यन्त रक्षसः}
-{ब्रह्मास्त्रोदीरणाच्छत्रोर्देवदानवकिंनराः}
+{ब्रह्मास्त्रोदीरणाच्छत्रोर्देवदानवकिन्नराः}
 
 
 \twolineshloka
@@ -3502,9 +3486,8 @@
 
 
 \sect{अध्यायः २९२}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -3524,12 +3507,12 @@
 
 \twolineshloka
 {पूजयित्वा रणे रामं प्रतिजग्मुर्यथागतम्}
-{तन्महोत्सवसंकाशमासीदाकाशमच्युत}
+{तन्महोत्सवसङ्काशमासीदाकाशमच्युत}
 
 
 \twolineshloka
 {ततो हत्वा दशग्रीवं लङ्कां रामो महायशाः}
-{विभीषणाय प्रददौ प्रभुः परपुरंजयः}
+{विभीषणाय प्रददौ प्रभुः परपुरञ्जयः}
 
 
 \twolineshloka
@@ -3579,7 +3562,7 @@
 
 
 \twolineshloka
-{योप्यस्या हर्षसंभूतो मुखरागः पुराऽभवत्}
+{योप्यस्या हर्षसभूतो मुखरागः पुराऽभवत्}
 {क्षणेन सपुनर्नष्टो निःश्वासादिव दर्पणे}
 
 
@@ -3604,7 +3587,7 @@
 
 
 \twolineshloka
-{ततोऽन्तरिक्षं तत्सर्वंदेवगन्धर्वसंकुलम्}
+{ततोऽन्तरिक्षं तत्सर्वन्देवगन्धर्वसङ्कुलम्}
 {शुशुभे तारकाचित्रं शरदीव नभस्तलम्}
 
 
@@ -3642,7 +3625,7 @@
 
 \twolineshloka
 {बोभो राघव सत्यं वै वायुरस्मि सदागतिः}
-{अपापा मैथिली राजन्संगच्छसहभार्यया}
+{अपापा मैथिली राजन्सङ्गच्छसहभार्यया}
 
 \uvacha{अग्निरुवाच}
 
@@ -3680,7 +3663,7 @@
 
 \twolineshloka
 {अवध्यः सर्वभूतानां मत्प्रसादात्पुराऽभवत्}
-{कस्माच्चित्कारणात्पापः कंचित्कालमुपेक्षितः}
+{कस्माच्चित्कारणात्पापः कञ्चित्कालमुपेक्षितः}
 
 
 \twolineshloka
@@ -3717,7 +3700,7 @@
 \threelineshloka
 {तमुवाच पिता भूयः प्रहृष्टो भरतर्षभ}
 {गच्छायोध्यां प्रशाधि त्वंराम रक्तान्तलोचन}
-{संपूर्णानीहवर्षाणि चतुर्दश महाद्युते}
+{सपूर्णानीहवर्षाणि चतुर्दश महाद्युते}
 
 
 \twolineshloka
@@ -3726,7 +3709,7 @@
 
 
 \twolineshloka
-{ततो वरं ददौ तस्मै ह्यविन्ध्याय परंतपः}
+{ततो वरं ददौ तस्मै ह्यविन्ध्याय परन्तपः}
 {त्रिजटां चार्थमानाभ्यां योजयामास राक्षसीम्}
 
 
@@ -3761,7 +3744,7 @@
 
 
 \twolineshloka
-{दृष्ट्वा रामं तु जानक्या संगतं शक्रसारथिः}
+{दृष्ट्वा रामं तु जानक्या सङ्गतं शक्रसारथिः}
 {उवाच परमप्रीतसुहृन्मध्य इदं वचः}
 
 
@@ -3777,7 +3760,7 @@
 
 \twolineshloka
 {इत्येवमुक्त्वाऽनुज्ञाप्यरामं शस्त्रभृतांवरम्}
-{संपूज्यापाक्रमत्तेन रथेनादित्यवर्चसा}
+{सपूज्यापाक्रमत्तेन रथेनादित्यवर्चसा}
 
 
 \twolineshloka
@@ -3787,7 +3770,7 @@
 
 \twolineshloka
 {विधाय रक्षां लङ्कायां विभीषणपुरस्कृतः}
-{संततार पुनस्तेन सेतुना मकरालयम्}
+{सन्ततार पुनस्तेन सेतुना मकरालयम्}
 
 
 \twolineshloka
@@ -3802,7 +3785,7 @@
 
 \twolineshloka
 {अथैनान्राघवः काले समानीयाभिपूज्य च}
-{विसर्जयामास तदा रत्नैः संतोष्य सर्वशः}
+{विसर्जयामास तदा रत्नैः सन्तोष्य सर्वशः}
 
 
 \twolineshloka
@@ -3831,7 +3814,7 @@
 
 
 \twolineshloka
-{लक्षयित्वेङ्गितं सर्वंप्रियं तस्मै निवेद्य वै}
+{लक्षयित्वेङ्गितं सर्वप्रियं तस्मै निवेद्य वै}
 {वायुपुत्रे पुनः प्राप्ते नन्दिग्राममुपाविशत्}
 
 
@@ -3882,9 +3865,8 @@
 
 
 \sect{अध्यायः २९३}
-\twolineshloka
-{मार्कण्डेय उवाच}
-{}
+
+\uvacha{मार्कण्डेय उवाच}
 
 
 \twolineshloka
@@ -3893,12 +3875,12 @@
 
 
 \twolineshloka
-{मा शुचः परुषव्याघ्र क्षत्रियोसि परंतप}
+{मा शुचः परुषव्याघ्र क्षत्रियोसि परन्तप}
 {बाहुवीर्याश्रयेमार्गे वर्तसे दीप्तनिर्णये}
 
 
 \twolineshloka
-{न हि ते वृजिनं किंचिद्दृश्यते परमण्वपि}
+{न हि ते वृजिनं किञ्चिद्दृश्यते परमण्वपि}
 {अस्मिन्मार्गे निपीदेयुः सेन्द्रा अपि सुरासुराः}
 
 
@@ -3909,7 +3891,7 @@
 
 \twolineshloka
 {सहायवति सर्वार्थाः सतिष्ठन्तीह सर्वशः}
-{किंनु तस्याजितं सङ्ख्ये यस् भ्राता धनंजयः}
+{किन्नु तस्याजितं सङ्ख्ये यस् भ्राता धनञ्जयः}
 
 
 \twolineshloka
@@ -3918,7 +3900,7 @@
 
 
 \twolineshloka
-{एभिः सहायैः कस्मात्त्वं विषीदसि परंतप}
+{एभिः सहायैः कस्मात्त्वं विषीदसि परन्तप}
 {य इमे वज्रिणः सेनां जयेयुः समरुद्गणाम्}
 
 
@@ -3949,9 +3931,9 @@
 
 \twolineshloka
 {तस्मात्सर्वं कुरुश्रेष्ठ मा शुचो भरतर्षभ}
-{त्वद्विधा हि महात्मानो न शोचन्ति परंतप}
+{त्वद्विधा हि महात्मानो न शोचन्ति परन्तप}
 
-\uvacha{वैशंपायन उवाच}
+\uvacha{वैशपायन उवाच}
 
 
 \twolineshloka
