--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -8,6 +8,8 @@
 % \textlink{http://stotrasamhita.net/wiki/Narayaniyam/Dashaka_34}
 \translink{}
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २७५}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -101,6 +103,8 @@
 {विमानं पुष्पकं नाम कामगं च ददौ प्रभुः}
 {यक्षाणामाधिपत्यञ्च राजराजत्वमेव च}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २७६}
 \uvacha{मार्कण्डेय उवाच}
@@ -321,6 +325,8 @@
 {दशग्रीवः कामबलो देवानां भयमादधत्}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २७७}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -427,6 +433,8 @@
 {सा तद्वच समाज्ञाय तथा चक्रे मनोजवा}
 {इतश्चेतश्च गच्छन्ती वैरसन्धुक्षणे रता}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २७८}
 
@@ -750,6 +758,8 @@
 {पुरा रामभयादेव तापसं प्रियजीवितम्}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २७९}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -977,6 +987,8 @@
 {तां ददर्श ततो गृध्रो जटायुर्गिरिगोचरः}
 {रुदतीं रामरामेति हियमाणां तपस्विनीम्}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २८०}
 
@@ -1223,6 +1235,8 @@
 {इत्युक्त्वाऽन्तर्हितो दिव्यः पुरुषः स महाप्रभः}
 {विस्मयं जग्मतुश्चोभौ प्रवीरौ रामलक्ष्मणौ}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २८१}
 
@@ -1604,6 +1618,8 @@
 {ददृशुस्तां त्रिजटया सहासीनां यथापुरम्}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २८२}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -1760,6 +1776,8 @@
 {राक्षसीभिः परिवृतावैदेही शोककशिन्ता}
 {सेव्यमाना त्रिजटया तत्रैव न्यवसत्तदा}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २८३}
 
@@ -2122,6 +2140,8 @@
 {सप्राप्त इतितं रामः प्रियवादिनमार्चयत्}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २८४}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -2269,7 +2289,7 @@
 
 \twolineshloka
 {विस्तीर्णं चैव नः सैन्यं हन्याच्छिद्रेण वै परः}
-{प्लवोडुपप्रतारश्चनैवात्रमम रोचते}
+{प्लवोडुपप्रतारश्च नैवात्र मम रोचते}
 
 
 \twolineshloka
@@ -2298,15 +2318,15 @@
 
 
 \threelineshloka
-{ब्रूहि किं तेकरोम्यत्रसाहाय्यं पुरुषर्षभ}
-{ऐक्ष्वाको ह्यस्मि ते ज्ञाती राम सत्यपराक्रमः}
+{ब्रूहि किं ते करोम्यत्र साहाय्यं पुरुषर्षभ}
+{ऐक्ष्वाको ह्यस्मि ते ज्ञाती राम सत्यपराक्रम}
 {एवमुक्तः समुद्रेण रामो वाक्यमथाब्रवीत्}
 
 
 \threelineshloka
 {मार्गमिच्छामि सैन्यस्य दत्तं नदनदीपते}
-{येन गत्वादशग्रीवं हन्याम कुलपांसनम्}
-{राक्षसंसानुबन्धं तं मम भार्यापहारिणम्}
+{येन गत्वा दशग्रीवं हन्यामि कुलपांसनम्}
+{राक्षसं सानुबन्धं तं मम भार्यापहारिणम्}
 
 
 \twolineshloka
@@ -2398,6 +2418,8 @@
 {निवेश्योपवने सैन्यं स शूरः प्राज्यवानरम्}
 {प्रेषयामास दुत्येन रावणस्य ततोऽङ्गदम्}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २८५}
 
@@ -2610,6 +2632,8 @@
 {कृते विमर्दे लङ्कायां लब्धलक्ष्योजयोत्तरः}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २८६}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -2689,6 +2713,8 @@
 {तेषां बलवतामासीन्महास्त्राणां समागमः}
 {विव्यथुः सकला येन त्रयो लोकाश्चराचराः}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २८७}
 
@@ -2840,6 +2866,8 @@
 {तथ्त्युक्त्वा युतौ वीरौ रावणं दूषाणानुजौ}
 {कुम्भकर्णं पुरस्कृत्य तूर्णं निर्ययतुः पुरात्}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २८८}
 
@@ -2996,6 +3024,8 @@
 {नैर्ऋतास्तत्रवध्यन्ते प्रायेण न तु वानराः}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २८९}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -3135,6 +3165,8 @@
 {तौ शरैरर्दितौ वीरौ भ्रारौ रामलक्ष्मणौ}
 {पेततुर्गगनाद्भूमिं सूर्याचन्द्रमसाविव}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 \sect{अध्यायः २९०}
 
@@ -3312,6 +3344,8 @@
 {आज्ञापयामास तदारथो मे कल्प्यतामिति}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २९१}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -3485,6 +3519,8 @@
 {नेशुर्ब्रह्मास्त्रनिर्दग्दा न च भस्माप्यदृश्यत}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २९२}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -3543,11 +3579,11 @@
 \threelineshloka
 {गच्छ वैदेहि मुक्ता त्वं यत्कार्यं तनमया कृतम्}
 {मामासाद्यपतिं भद्रे न त्वं राक्षसवेश्मनि}
-{जरां व्रजेथा इतिमे निहतोसौ निशाचरः}
+{जरां व्रजेथा इति मे निहतोऽसौ निशाचरः}
 
 
 \twolineshloka
-{कथं ह्यस्मद्विधो जातु जानन्धर्मविनिश्चयम्}
+{कथं ह्यस्मद्विधो जातु जानन् धर्मविनिश्चयम्}
 {परहस्तगतां नारीं मुहूर्तमपि धारयेत्}
 
 
@@ -3562,7 +3598,7 @@
 
 
 \twolineshloka
-{योप्यस्या हर्षसभूतो मुखरागः पुराऽभवत्}
+{योऽप्यस्या हर्षसम्भूतो मुखरागः पुराऽभवत्}
 {क्षणेन सपुनर्नष्टो निःश्वासादिव दर्पणे}
 
 
@@ -3577,7 +3613,7 @@
 
 
 \twolineshloka
-{शक्रश्चाग्निश्च वायुश्चयमो वरुण एव च}
+{शक्रश्चाग्निश्च वायुश्च यमो वरुण एव च}
 {यक्षाधिपश्च भगवांस्तथा सप्तर्षयोऽमलाः}
 
 
@@ -3587,22 +3623,22 @@
 
 
 \twolineshloka
-{ततोऽन्तरिक्षं तत्सर्वन्देवगन्धर्वसङ्कुलम्}
+{ततोऽन्तरिक्षं तत्सर्वं देवगन्धर्वसङ्कुलम्}
 {शुशुभे तारकाचित्रं शरदीव नभस्तलम्}
 
 
 \twolineshloka
-{तत उत्थाय वैदेही तेषां मध्ययशस्विनी}
+{तत उत्थाय वैदेही तेषां मध्ये यशस्विनी}
 {उवाच वाक्यं कल्याणी रामं पृथुलवक्षसम्}
 
 
 \twolineshloka
 {राजपुत्र न ते कोपं करोमि विदिताहि मे}
-{गतिः स्त्रीणां नराणां च शृणु चदं वचो मम}
+{गतिः स्त्रीणां नराणां च शृणु चेदं वचो मम}
 
 
 \twolineshloka
-{अन्तश्चरतिभूतानां मातरिश्वा सदागतिः}
+{अन्तश्चरति भूतानां मातरिश्वा सदागतिः}
 {स मे विमुञ्चतु प्राणान्यदि पापं चराम्यहम्}
 
 
@@ -3612,7 +3648,7 @@
 
 
 \twolineshloka
-{यथाऽहं त्वदृतेवीर नान्यंस्वप्नेऽप्यचिन्तयम्}
+{यथाऽहं त्वदृते वीर नान्यं स्वप्नेऽप्यचिन्तयम्}
 {तथा मे देव निर्दिष्टस्त्वमेव हि पतिर्भव}
 
 
@@ -3622,44 +3658,37 @@
 
 \uvacha{वायुरुवाच}
 
-
 \twolineshloka
-{बोभो राघव सत्यं वै वायुरस्मि सदागतिः}
-{अपापा मैथिली राजन्सङ्गच्छसहभार्यया}
+{भो भो राघव सत्यं वै वायुरस्मि सदागतिः}
+{अपापा मैथिली राजन् सङ्गच्छ सह भार्यया}
 
 \uvacha{अग्निरुवाच}
 
-
 \twolineshloka
 {अहमन्तःशरीरस्थो भूतानां रघुनन्दन}
-{सुसूक्ष्ममपि काकुत्स्थ मैथिलीनापराध्यति}
+{सुसूक्ष्ममपि काकुत्स्थ मैथिली नापराध्यति}
 
 \uvacha{वरुण उवाच}
 
-
 \twolineshloka
-{रसावै मत्प्रसूता हि भूतदेहेषु राघव}
+{रसा वै मत्प्रसूता हि भूतदेहेषु राघव}
 {अहंवै त्वां प्रब्रवीमि मैथिली प्रतिगृह्यताम्}
 
 \uvacha{यम उवाच}
-
 
 \twolineshloka
 {धर्मोऽहमस्मि काकुत्स्थ साक्षी लोकस्य कर्मणाम्}
 {शुभाशुभानां सीतेयमपापा प्रतिगृह्यताम्}
 
-\uvacha{ब्र्हमोवाच}
-
+\uvacha{ब्रह्मोवाच}
 
 \twolineshloka
 {पुत्र नैतदिहाश्चर्यं त्वयि राजर्षिधर्मणि}
 {साधो सद्वृत्त काकुत्स्थ शृणु चेदं वचो मम}
 
-
 \twolineshloka
-{शत्रुरेष त्वया वीर देवगनधर्वभोगिनाम्}
+{शत्रुरेष त्वया वीर देवगन्धर्वभोगिनाम्}
 {यक्षाणां दानवानां च महर्षीणां च पातितः}
-
 
 \twolineshloka
 {अवध्यः सर्वभूतानां मत्प्रसादात्पुराऽभवत्}
@@ -3774,12 +3803,12 @@
 
 
 \twolineshloka
-{पुष्पकेण विसानन खेचरेण विराजता}
+{पुष्पकेण विमानेन खेचरेण विराजता}
 {कामगेन यथामुख्यैरमात्यैः संवृतो वसी}
 
 
 \twolineshloka
-{ततस्तीरे समुद्रस्यं यत्रशिश्य स पार्थिवः}
+{ततस्तीरे समुद्रस्य यत्र शिश्ये स पार्थिवः}
 {तत्रैवोवास धर्मात्मा सहितः सर्ववानरैः}
 
 
@@ -3864,6 +3893,8 @@
 {शताश्वमेधानाजह्रे जारूथ्यान्स निरर्गलान्}
 
 
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
 \sect{अध्यायः २९३}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -3940,3 +3971,7 @@
 {एवमाश्वासितो राजामार्कण्डेयेन धीमता}
 {त्यक्त्वा दुःखमदीनात्मा पुनरप्येनमब्रवीत्}
 
+
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+
+रामोपाख्यान-पर्व समाप्तम्॥१८॥ 
