--- a/mulam/frontmatter/preamble-mulam.tex
+++ b/mulam/frontmatter/preamble-mulam.tex
@@ -126,7 +126,7 @@ urlcolor=black					% colour of external links
   % \item[\faCommentDots\ \sffamily\small\footnotesize~Notes:] \textsf{\footnotesize\storyNotes}
   \item[\faCommentDots\sffamily\small\footnotesize]\textsf{\footnotesize\storyNotes}
   % \item[\faTags]\hspace{-0.4ex}\tagList
-  \ifx\textURL\empty \else\item[\faLink\ Text:] \url{\textURL} \fi
+  \ifx\textURL\empty \else\item[\faLink] \href{\textURL}{Source Text} \fi
   \ifx\transURL\empty \else\item[\faGlobe\ Translation:] \url{\transURL} \fi
 \end{description}
 \end{StoryMetadataBox}
