--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -8,8 +8,6 @@
 % \textlink{http://stotrasamhita.net/wiki/Narayaniyam/Dashaka_34}
 \translink{}
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
-
 \sect{अध्यायः २७५}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -104,7 +102,7 @@
 {यक्षाणामाधिपत्यञ्च राजराजत्वमेव च}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७५॥
 
 \sect{अध्यायः २७६}
 \uvacha{मार्कण्डेय उवाच}
@@ -325,7 +323,7 @@
 {दशग्रीवः कामबलो देवानां भयमादधत्}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७६॥
 
 \sect{अध्यायः २७७}
 
@@ -434,7 +432,7 @@
 {इतश्चेतश्च गच्छन्ती वैरसन्धुक्षणे रता}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७७॥
 
 \sect{अध्यायः २७८}
 
@@ -758,7 +756,7 @@
 {पुरा रामभयादेव तापसं प्रियजीवितम्}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७८॥
 
 \sect{अध्यायः २७९}
 
@@ -988,7 +986,7 @@
 {रुदतीं रामरामेति हियमाणां तपस्विनीम्}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२७९॥
 
 \sect{अध्यायः २८०}
 
@@ -1236,7 +1234,7 @@
 {विस्मयं जग्मतुश्चोभौ प्रवीरौ रामलक्ष्मणौ}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८०॥
 
 \sect{अध्यायः २८१}
 
@@ -1618,7 +1616,7 @@
 {ददृशुस्तां त्रिजटया सहासीनां यथापुरम्}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८१॥
 
 \sect{अध्यायः २८२}
 
@@ -1777,7 +1775,7 @@
 {सेव्यमाना त्रिजटया तत्रैव न्यवसत्तदा}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८२॥
 
 \sect{अध्यायः २८३}
 
@@ -2140,7 +2138,7 @@
 {सप्राप्त इतितं रामः प्रियवादिनमार्चयत्}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८३॥
 
 \sect{अध्यायः २८४}
 
@@ -2419,7 +2417,7 @@
 {प्रेषयामास दुत्येन रावणस्य ततोऽङ्गदम्}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८४॥
 
 \sect{अध्यायः २८५}
 
@@ -2471,10 +2469,9 @@
 {रामसन्देशमामन्त्र्य वाग्मी वक्तुं प्रचक्रमे}
 
 
-\threelineshloka
+\twolineshloka
 {आह त्वां राघवो राजन्कोसलेन्द्रो महायशाः}
 {प्राप्तकालमिदं वाक्यं तदादत्स्व सुदुर्मते}
-{}
 
 
 \twolineshloka
@@ -2632,7 +2629,7 @@
 {कृते विमर्दे लङ्कायां लब्धलक्ष्योजयोत्तरः}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८५॥
 
 \sect{अध्यायः २८६}
 
@@ -2714,7 +2711,7 @@
 {विव्यथुः सकला येन त्रयो लोकाश्चराचराः}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८६॥
 
 \sect{अध्यायः २८७}
 
@@ -2867,7 +2864,7 @@
 {कुम्भकर्णं पुरस्कृत्य तूर्णं निर्ययतुः पुरात्}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८७॥
 
 \sect{अध्यायः २८८}
 
@@ -3024,7 +3021,7 @@
 {नैर्ऋतास्तत्रवध्यन्ते प्रायेण न तु वानराः}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८८॥
 
 \sect{अध्यायः २८९}
 
@@ -3166,7 +3163,7 @@
 {पेततुर्गगनाद्भूमिं सूर्याचन्द्रमसाविव}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२८९॥
 
 \sect{अध्यायः २९०}
 
@@ -3303,10 +3300,9 @@
 {लङ्कां प्रवेशयामासुस्तं रथं वाजिनस्तदा}
 
 
-\threelineshloka
+\twolineshloka
 {ददर्श रावणस्तं च रथं पुत्रविनाकृतम्}
 {स पुत्रं निहतं श्रुत्वा त्रासात्सभ्रान्तमानसः}
-{}
 
 
 % Check verse!
@@ -3344,7 +3340,7 @@
 {आज्ञापयामास तदारथो मे कल्प्यतामिति}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९०॥
 
 \sect{अध्यायः २९१}
 
@@ -3519,7 +3515,7 @@
 {नेशुर्ब्रह्मास्त्रनिर्दग्दा न च भस्माप्यदृश्यत}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९१॥
 
 \sect{अध्यायः २९२}
 
@@ -3893,7 +3889,7 @@
 {शताश्वमेधानाजह्रे जारूथ्यान्स निरर्गलान्}
 
 
-॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
+॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९२॥
 
 \sect{अध्यायः २९३}
 
@@ -3975,3 +3971,5 @@
 ॥इति श्रीमन्महाभारते अरण्यपर्वणि रामोपाख्यान-पर्वणि त्रिशततमोऽध्यायः॥२९३॥
 
 रामोपाख्यान-पर्व समाप्तम्॥१८॥ 
+
+\closesection
