--- a/mulam/ramayana-ratnakara-mulam.tex
+++ b/mulam/ramayana-ratnakara-mulam.tex
@@ -21,22 +21,45 @@
 %\large
 \Large
 \setmainfont{Sanskrit 2003:script=deva}
+\cleardoublepage
 \setcounter{page}{0}
 \pagenumbering{arabic}
 \sectionmark{\mbox{}}
 \clearpage
 \begin{center}
+    \part{विस्तृत-राम-चरितानि}
     \input{valmiki-ramayanam/SankshepaRamayanam.tex}
     \input{valmiki-ramayanam/KavyaSankshepa.tex}
     \input{valmiki-ramayanam/RamavrttaSamshrava.tex}
     \input{valmiki-ramayanam/HanumajjanakiSamvada.tex}
     \input{valmiki-ramayanam/Hanumadupadesha.tex}
     \input{valmiki-ramayanam/HanumadBharataSambhashanam.tex}
+    \input{valmiki-ramayanam/GayatriRamayanam.tex}
+    \input{valmiki-ramayanam/NamaRamayanam.tex}
     \input{bhagavatam/bhagavatam-09-10.tex}
     \input{bhagavatam/bhagavatam-09-11.tex}
     \input{narayaniyam/dashakam-34.tex}
     \input{narayaniyam/dashakam-35.tex}
     \input{mahabharatam/ramopakhyanaparva.tex}
+    \input{devi-bhagavatam/RamacharitaVarnanam.tex}
+    \input{devi-bhagavatam/LakshmanaKrtaRamaShokaSantvanam.tex}
+    \input{devi-bhagavatam/RamayaDeviVaradanam.tex}
+    \input{adhyatma-ramayanam/RamaHrdayam.tex}
+    \input{adhyatma-ramayanam/HanumatSitaSamvada.tex}
+    \part{रामायणान्तर्गताः कथाः}
+    \input{devi-bhagavatam/VedavatiCharitram.tex}
+    \part{अनुबन्धाः}
+    \input{valmiki-ramayanam/RamayanaDhyanam.tex}
+    \input{valmiki-ramayanam/RamayanaMangalaShloka.tex}
+    \begingroup
+    \let\chapt\sect
+    \input{../../namavali-manjari/100/Rama_108.tex}
+    \input{../../namavali-manjari/100/Sita_108.tex}
+    \input{../../namavali-manjari/100/Anjaneya_108.tex}
+    \input{../../namavali-manjari/100/Rama_Ramarahasya_108.tex}
+    \input{../../namavali-manjari/100/Sita_Ramarahasya_108.tex}
+    \input{../../namavali-manjari/100/Anjaneya_Ramarahasya_108.tex}
+    \endgroup
     
 \end{center}
 
