--- a/mulam/ramayana-ratnakara-mulam.tex
+++ b/mulam/ramayana-ratnakara-mulam.tex
@@ -46,6 +46,7 @@
     \input{devi-bhagavatam/RamayaDeviVaradanam.tex}
     \input{adhyatma-ramayanam/RamaHrdayam.tex}
     \input{adhyatma-ramayanam/HanumatSitaSamvada.tex}
+    \input{agni-puranam/ramavatara-varnanam.tex}
     \part{रामायणान्तर्गताः कथाः}
     \input{devi-bhagavatam/VedavatiCharitram.tex}
     \part{अनुबन्धाः}
