--- a/mulam/mahabharatam/ramopakhyanaparva.tex
+++ b/mulam/mahabharatam/ramopakhyanaparva.tex
@@ -64,7 +64,7 @@
 
 \twolineshloka
 {एतद्रामस्य ते जन्म सीतायाश्च प्रकीर्तितम्}
-{रावणस्यापि ते जन्म व्याख्यास्यामि रजनेश्वर}
+{रावणस्यापि ते जन्म व्याख्यास्यामि जनेश्वर}
 
 
 \twolineshloka
@@ -88,13 +88,13 @@
 
 
 \twolineshloka
-{पितामहस्तुप्रीतात्मा ददौ वैश्रवणस् ह}
+{पितामहस्तु प्रीतात्मा ददौ वैश्रवणस्य ह}
 {अमरत्वं धनेशत्वं लोकपालत्वमेव च}
 
 
 \twolineshloka
 {ईशानन तथा सख्यं पुत्रं च नलकूवरम्}
-{राजधानीनिवेसं च लङ्कांरक्षोगणान्विताम्}
+{राजधानीनिवेसं च लङ्कां रक्षोगणान्विताम्}
 
 
 \twolineshloka
@@ -109,7 +109,7 @@
 
 
 \twolineshloka
-{पुलस्त्यस्तु यः क्रोधादर्धदेहोऽभवन्मुनिः}
+{पुलस्त्यस्य तु यः क्रोधादर्धदेहोऽभवन्मुनिः}
 {विश्रवानाम सक्रोधं पितरं राक्षसेश्वरः}
 
 
@@ -159,8 +159,8 @@
 
 
 \twolineshloka
-{कुम्भकर्णओ बलेनासीत्सर्वेभ्योऽभ्यधिको युधि}
-{मायावी रणशौण्डश्चरौद्रश्च रजनीचरः}
+{कुम्भकर्णो बलेनासीत्सर्वेभ्योऽभ्यधिको युधि}
+{मायावी रणशौण्डश्च रौद्रश्च रजनीचरः}
 
 
 \twolineshloka
@@ -240,7 +240,7 @@
 
 
 \twolineshloka
-{य एते कीर्तिताः सर्वे न तेभ्योस्ति भयं रतव}
+{य एते कीर्तिताः सर्वे न तेभ्योऽस्ति भयं तव}
 {ऋते मनुष्याद्भद्रं ते तथा तद्विहितं मया}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -511,7 +511,7 @@
 
 
 \twolineshloka
-{अद् पुष्यो निशि ब्रह्मन्पुण्यं योगमुपैष्यति}
+{अद्य पुष्यो निशि ब्रह्मन्पुण्यं योगमुपैष्यति}
 {सभाराः सभ्रियन्तां मे रामश्चोपनिमन्त्र्यताम्}
 
 
@@ -564,8 +564,8 @@
 
 
 \twolineshloka
-{पृथिव्यां राजराजोस्मि चातुर्वर्ण्यस् रिता}
-{यस्तेऽभिलपितः कामो ब्रूहि कल्याणि माचिरम्}
+{पृथिव्यां राजराजोऽस्मि चातुर्वर्ण्यस्य रक्षिता}
+{यस्तेऽभिलषितः कामो ब्रूहि कल्याणि माचिरम्}
 
 
 \twolineshloka
@@ -995,7 +995,7 @@
 
 \twolineshloka
 {सखा दशरथस्यासीज्जटायुररुणात्मजः}
-{गृध्रराजो महावीरः सपातिर्यस् सोदरः}
+{गृध्रराजो महावीरः सम्पातिर्यस्य सोदरः}
 
 
 \twolineshloka
@@ -1020,7 +1020,7 @@
 
 \twolineshloka
 {स वध्यमानो गृध्रेण रामप्रियहितैषिणा}
-{खङ्गमादाय चिच्छेद भुजौ तस् पतत्रिणः}
+{खङ्गमादाय चिच्छेद भुजौ तस्य पतत्रिणः}
 
 
 \twolineshloka
@@ -1074,13 +1074,13 @@
 
 
 \twolineshloka
-{तस् तत्सर्वमाचख्यौ सीताया लक्ष्मणो वचः}
+{तस्य तत्सर्वमाचख्यौ सीताया लक्ष्मणो वचः}
 {यदुक्तवत्यसदृशं वैदेही पश्चिमं वचः}
 
 
 \twolineshloka
 {दह्यमानेन तु हृदा रामोऽभ्यपतदाश्रमम्}
-{स ददर्श रतदा गृध्रं निहतं पर्वतोपमम्}
+{स ददर्श तदा गृध्रं निहतं पर्वतोपमम्}
 
 
 \twolineshloka
@@ -1090,7 +1090,7 @@
 
 \twolineshloka
 {स तावुवाच तेजस्वी सहितौ रामलक्ष्मणौ}
-{गृध्रराजेस्मि भद्रंवां सखा दशरथस् वै}
+{गृध्रराजेस्मि भद्रंवां सखा दशरथस्य वै}
 
 
 \twolineshloka
@@ -1099,13 +1099,13 @@
 
 
 \twolineshloka
-{ततो ददृशतुस्तौ तं छिननपक्षद्वयं खगम्}
+{ततो ददृशतुस्तौ तं छिन्नपक्षद्वयं खगम्}
 {तयोः शशंस गृध्रस्तु सीतार्थे रावणाद्वधम्}
 
 
 \twolineshloka
 {अपृच्छद्राघवो गृध्रं रावणः कां दिशं गतः}
-{तस् गृध्रः शिरःकम्पैराचचक्षे ममार च}
+{तस्य गृध्रः शिरःकम्पैराचचक्षे ममार च}
 
 
 \twolineshloka
@@ -1160,7 +1160,7 @@
 
 \twolineshloka
 {द्रक्ष्यन्त्यार्यस्य धन्या ये कुशलाजशमीदलैः}
-{अभिषिक्तस् वदनं सोमं शान्तघनं यथा}
+{अभिषिक्तस्य वदनं सोमं शान्तघनं यथा}
 
 
 \twolineshloka
@@ -1175,7 +1175,7 @@
 
 
 \twolineshloka
-{इत्येवं वदता तस् भुजो रामेण पातितः}
+{इत्येवं वदता तस्य भुजो रामेण पातितः}
 {खङ्गेन भृशतीक्ष्णेन निकृत्तस्तिलकाण्डवत्}
 
 
@@ -1216,7 +1216,7 @@
 
 \twolineshloka
 {वसते तत्रसुग्रीवश्चतुर्भिः सचिवैः सह}
-{भ्राता बानरराजस् वालिनो हेममालिनः}
+{भ्राता वानरराजस्य वालिनो हेममालिनः}
 
 
 \twolineshloka
@@ -1226,7 +1226,7 @@
 
 \twolineshloka
 {एतावच्छक्यमस्माभिर्वक्तुं द्रष्टासि जानकीम्}
-{ध्रुवं वानरराजस् विदितो रावणालयः}
+{ध्रुवं वानरराजस्य विदितो रावणालयः}
 
 
 \twolineshloka
@@ -1242,7 +1242,7 @@
 
 
 \twolineshloka
-{ततोऽविदूरे नलिनीं रप्रभूतकमलोत्पलाम्}
+{ततोऽविदूरे नलिनीं प्रभूतकमलोत्पलाम्}
 {सीताहरणदुःखार्तः पम्पां रामः समासदत्}
 
 
@@ -1252,7 +1252,7 @@
 
 
 \twolineshloka
-{विललाप सराजेन्द्रस्तत्रकान्तानुस्मरन्}
+{विललाप स राजेन्द्रस्तत्र कान्तामनुस्मरन्}
 {कामबाणाभिसन्तप्तं सौमित्रिस्तमथाब्रवीत्}
 
 
@@ -1283,7 +1283,7 @@
 
 \twolineshloka
 {तावृश्यमूकमभ्येत्य बहुमूलफलद्रुमम्}
-{गिर्यग्रे वानरान्पञ्वीरौ ददृशतुस्तदा}
+{गिर्यग्रे वानरान्पञ्च वीरौ ददृशतुस्तदा}
 
 
 \twolineshloka
@@ -1292,8 +1292,8 @@
 
 
 \twolineshloka
-{तेन सभाष्य पूर्वं तौ सुग्रीवमभिजग्मतुः}
-{रसख्यं वानरराजेन चक्रे रामस्तदा नृप}
+{तेन सम्भाष्य पूर्वं तौ सुग्रीवमभिजग्मतुः}
+{सख्यं वानरराजेन चक्रे रामस्तदा नृप}
 
 
 \twolineshloka
@@ -1302,7 +1302,7 @@
 
 
 \twolineshloka
-{तद्वासो दर्शयामास तस् कार्ये निवेदिते}
+{तद्वासो दर्शयामास तस्य कार्ये निवेदिते}
 {वानराणां तु यत्सीता ह्रियमाणा व्यपासृजत्}
 
 
@@ -1338,7 +1338,7 @@
 
 % Check verse!
 \twolineshloka
-{सर्वभूतरुतज्ञा शृणु सर्वं कपीश्वर}
+{सर्वभूतरुतज्ञा त्वं शृणु सर्वं कपीश्वर}
 {केन चाश्रयवान्प्राप्तो ममैष भ्रातृगन्धिकः}
 
 \twolineshloka
@@ -1348,7 +1348,7 @@
 
 \twolineshloka
 {हृतदारो महासत्वोरामो दशरथात्मजः}
-{रतुल्यारिमित्रतां प्राप्तः सुग्रीवेण धनुर्धरः}
+{तुल्यारिमित्रतां प्राप्तः सुग्रीवेण धनुर्धरः}
 
 
 \twolineshloka
@@ -1408,7 +1408,7 @@
 
 \twolineshloka
 {न विशेषस्तयोर्युद्धे यदा कश्चन दृश्यते}
-{सुग्रीवस् तदा मालां हनुमान्कण्ठ आसजत्}
+{सुग्रीवस्य तदा मालां हनुमान्कण्ठ आसजत्}
 
 
 \twolineshloka
@@ -1422,7 +1422,7 @@
 
 
 \twolineshloka
-{विष्फारस्तस् धनुषो यन्त्रस्येव तदा बभौ}
+{विष्फारस्तस्य धनुषो यन्त्रस्येव तदा बभौ}
 {वितत्रास तदा वाली शरेणाभिहतो हृदि}
 
 
@@ -1438,7 +1438,7 @@
 
 \twolineshloka
 {हते वालिनि सुग्रीवः किष्किन्धां प्रत्यपद्यत}
-{तां तारापतिमुखीं तारां निपतितेश्वराम्}
+{तां च तारापतिमुखीं तारां निपतितेश्वराम्}
 
 
 \twolineshloka
@@ -1669,9 +1669,9 @@
 
 
 \threelineshloka
-{सन्ति मे देवक्न्याश्च गन्धर्वाणआं च योषितः}
-{सन्ति दानवन्याश् दैत्यानां चापि योषितः}
-{तासामद्यविशालाक्षि सर्वासां मे भवोत्तमा}
+{सन्ति मे देवकन्याश्च गन्धर्वाणां च योषितः}
+{सन्ति दानवकन्याश्च दैत्यानां चापि योषितः}
+{तासामद्य विशालाक्षि सर्वासां मे भवोत्तमा}
 
 
 \twolineshloka
@@ -1706,7 +1706,7 @@
 
 \twolineshloka
 {इत्युक्ता तेन वैदेही परिवृत्य सुभानना}
-{तृणमनतरतः कृत्वातमुवाच निशाचरम्}
+{तृणमन्तरतः कृत्वा तमुवाच निशाचरम्}
 
 
 \twolineshloka
@@ -1784,7 +1784,7 @@
 
 \twolineshloka
 {राघवः सहसौमित्रिः सुग्रीवेणाभिपालितः}
-{वसनमाल्यवतः पृष्ठे ददर्श विमलं नभः}
+{वसन्माल्यवतः पृष्ठे ददर्श विमलं नभः}
 
 
 \twolineshloka
@@ -1883,23 +1883,23 @@
 
 
 \twolineshloka
-{इत्युक्तो लक्ष्मणत्तेन कवानरेनद्रेण धीमता}
-{त्यक्त्वारोषमदीनात्मा सुग्रीवं प्रत्यपूजयत्}
+{इत्युक्तो लक्ष्मणस्तेन वानरेन्द्रेण धीमता}
+{त्यक्त्वा रोषमदीनात्मा सुग्रीवं प्रत्यपूजयत्}
 
 
 \twolineshloka
 {सरामं सहसुग्रीवो माल्यवत्पुष्ठमास्थितम्}
-{भिगम्योदयं तस्य कार्यस्य प्रत्यवेदयत्}
+{अभिगम्योदयं तस्य कार्यस्य प्रत्यवेदयत्}
 
 
 \twolineshloka
-{इत्येवंवानरेनद्रास्ते समाजन्मुः सहस्रशः}
+{इत्येवं वानरेन्द्रास्ते समाजग्मुः सहस्रशः}
 {दिशस्तिस्रो विचित्याथ न तु ये दक्षिणां गताः}
 
 
 \twolineshloka
 {आचख्युस्तत्र रामाय महीं सागरमेखलाम्}
-{विचितां न तु वैदेह्या दर्शनं रावणस् वा}
+{विचितां न तु वैदेह्या दर्शनं रावणस्य वा}
 
 
 \twolineshloka
@@ -1978,18 +1978,18 @@
 
 
 \twolineshloka
-{गत्वा सुमहदध्वानमादित्यस् प्रभां ततः}
+{गत्वा सुमहदध्वानमादित्यस्य प्रभां ततः}
 {दृष्टवन्तः स्म तत्रैवभवनं दिव्यमन्तरा}
 
 
 \twolineshloka
-{गयस् किल दैत्यस् तदा सद्वेश्म राघव}
-{तत्रप्रभावती नाम तपोऽतप्यत तापसी}
+{मयस्य किल दैत्यस्य तदा सद्वेश्म राघव}
+{तत्र प्रभावती नाम तपोऽतप्यत तापसी}
 
 
 \twolineshloka
-{तया दत्तानि भोज्यानिपानानिविविधानि च}
-{भुकत््वा लब्धबलाः सन्तस्तयोक्तेन पथा ततः}
+{तया दत्तानि भोज्यानि पानानि विविधानि च}
+{भुक्त्वा लब्धबलाः सन्तस्तयोक्तेन पथा ततः}
 
 
 \twolineshloka
@@ -1999,7 +1999,7 @@
 
 \twolineshloka
 {ततो मलयमारुह्य पश्यन्तो वरुणालयम्}
-{कविषण्णा व्यथिताः खिन्ना निराशा जीविते भृशम्}
+{विषण्णा व्यथिताः खिन्ना निराशा जीविते भृशम्}
 
 
 \twolineshloka
@@ -2064,7 +2064,7 @@
 
 \twolineshloka
 {दृष्टापारे समुद्रस्य त्रिकूटगिरिकन्दरे}
-{भवित्री तत्र वैदेही न रमेऽस्त्यत्रविचारणा}
+{भवित्री तत्र वैदेही न मेऽस्त्यत्र विचारणा}
 
 
 \twolineshloka
@@ -2100,7 +2100,7 @@
 
 \twolineshloka
 {कुशलन्त्वाब्रवीद्रामःसीते सौमित्रिणा सह}
-{सखिभावाच् सुग्रीवः कुशलं त्वाऽनुपृच्छति}
+{सखिभावाच्च सुग्रीवः कुशलं त्वाऽनुपृच्छति}
 
 
 \twolineshloka
@@ -2157,7 +2157,7 @@
 
 \twolineshloka
 {कोटीशतवृतोवाऽपिगजो गवय एव च}
-{वानरेन््रौ महावीर्यौ पृथक्पृथगदृश्यताम्}
+{वानरेन्द्रौ महावीर्यौ पृथक्पृथगदृश्यताम्}
 
 
 \twolineshloka
@@ -2177,11 +2177,11 @@
 
 \twolineshloka
 {श्रीमान्दधिमुखो नाम हरिवृद्धोऽतिवीर्यवान्}
-{प्रचकर्ष महासैनयं हरीणां भीमतेजसाम्}
+{प्रचकर्ष महासैन्यं हरीणां भीमतेजसाम्}
 
 
 \twolineshloka
-{कृषणानां मुखपुण्ड्राणामृक्षाणां भीमकर्मणाम्}
+{कृष्णानां मुखपुण्ड्राणामृक्षाणां भीमकर्मणाम्}
 {कोटीर्दश द्वादश च त्रिंशत्पञ्च प्रकर्षति}
 
 
@@ -2252,7 +2252,7 @@
 
 \twolineshloka
 {द्वितीयसागरनिमं तद्बलबहुलध्वजम्}
-{वेलावनं समासाद् निवासमकरोत्तदा}
+{वेलावनं समासाद्य निवासमकरोत्तदा}
 
 
 \twolineshloka
@@ -2272,7 +2272,7 @@
 
 \twolineshloka
 {केचिन्नौभिर्व्यवस्यन्ति केचिच्च विविधैः प्लवैः}
-{नेति रामस्तु तानसर्वान्सान्त्वयन्प्रत्यभाषत}
+{नेति रामस्तु तान्सर्वान्सान्त्वयन्प्रत्यभाषत}
 
 
 \twolineshloka
@@ -2292,7 +2292,7 @@
 
 \twolineshloka
 {अहं त्विमं जलनिधिं समारप्स्याम्युपायतः}
-{प्रतिशेष्याम्युपवसन्दर्शयिष्ति मां ततः}
+{प्रतिशेष्याम्युपवसन्दर्शयिष्यति मां ततः}
 
 
 \twolineshloka
@@ -2333,7 +2333,7 @@
 
 
 \twolineshloka
-{इत्येवब्रुवतः श्रुत्वारामस्य वरुणालयः}
+{इत्येवं ब्रुवतः श्रुत्वा रामस्य वरुणालयः}
 {उवाचव्यथितोवाक्यमितिबद्धाञ्जलिःस्थितः}
 
 
@@ -2343,7 +2343,7 @@
 
 
 \twolineshloka
-{यदि दास्यामि ते मार्गं सैन्यस् व्रजतोऽऽज्ञया}
+{यदि दास्यामि ते मार्गं सैन्यस्य व्रजतोऽऽज्ञया}
 {अन्येऽप्याज्ञापयिष्यन्ति मामेवं धनुषोबलात्}
 
 
@@ -2389,7 +2389,7 @@
 
 \twolineshloka
 {सर्वराक्षसराज्येचाप्यभ्यपिञ्चद्विभीषणम्}
-{चक्रे च मन्त्रसचिवं सहृदंलक्ष्मणस् च}
+{चक्रे च मन्त्रसचिवं सहृदं लक्ष्मणस्य च}
 
 
 \twolineshloka
@@ -2456,7 +2456,7 @@
 
 \twolineshloka
 {अङ्गदस्त्वथ लङ्कायां द्वारदेशमुपागतः}
-{विदितो रराक्षसेन्द्रस्य प्रविवेशगतव्यथः}
+{विदितो राक्षसेन्द्रस्य प्रविवेशगतव्यथः}
 
 
 \twolineshloka
@@ -2496,21 +2496,21 @@
 
 \twolineshloka
 {हन्तास्मि त्वां सहामात्यैर्युध्यस्व पुरुषो भव}
-{पश्य मे धनुषो वीर्यं मानुषस् निशाचर}
+{पश्य मे धनुषो वीर्यं मानुषस्य निशाचर}
 
 
 \twolineshloka
-{मुच्यतां जानकी सीता न मे मोक्ष्यमसि कर्हिचित्}
+{मुच्यतां जानकी सीता न मे मोक्ष्यसि कर्हिचित्}
 {अराक्षसमिमं लोकङ्कर्ताऽस्मि निशितैः शरैः}
 
 
 \twolineshloka
-{इतितस् ब्रुवाणस् दूतस् परुषं वचः}
+{इति तस्य ब्रुवाणस्य दूतस्य परुषं वचः}
 {श्रुत्वा न ममृषे राजा रावणः क्रोधमूर्च्छितः}
 
 
 \twolineshloka
-{हङ्गितज्ञास्ततो भर्तुश्चत्वारो रजनीचराः}
+{इङ्गितज्ञास्ततो भर्तुश्चत्वारो रजनीचराः}
 {चतुर्ष्वङ्गेषु जगृहुः शार्दूलमिव पक्षिणः}
 
 
@@ -2551,7 +2551,7 @@
 
 \twolineshloka
 {प्रलम्बबाहूरुकरजङ्घान्तरविलम्बिनाम्}
-{ऋक्षाणआं धूम्रवर्णानां तिस्रः कोठ्यो व्यवस्थिताः}
+{ऋक्षाणां धूम्रवर्णानां तिस्रः कोठ्यो व्यवस्थिताः}
 
 
 \twolineshloka
@@ -2730,7 +2730,7 @@
 
 \twolineshloka
 {ततः प्रगृह्यविपुलां शतघण्टां विभीषणः}
-{अनुमन्त्र्य महाशक्तिं चिक्षेपास् शिरः प्रति}
+{अनुमन्त्र्य महाशक्तिं चिक्षेपास्य शिरः प्रति}
 
 
 \twolineshloka
@@ -2744,7 +2744,7 @@
 
 
 \twolineshloka
-{तस् मेघोपमं सैन्यमापतद्भीमदर्शनम्}
+{तस्य मेघोपमं सैन्यमापतद्भीमदर्शनम्}
 {दृष्ट्वैव सहसा दीर्णा रणे वानरपुङ्गवाः}
 
 
@@ -2774,13 +2774,13 @@
 
 
 \twolineshloka
-{तयोर्युद्धमभूदधोरं हरिराक्षसवीरयोः}
-{जीगीषतोर्युधाऽन्योन्यमिन्द्रप्रह्लादयोरिवम्}
+{तयोर्युद्धमभूद्घोरं हरिराक्षसवीरयोः}
+{जिगीषतोर्युधाऽन्योन्यमिन्द्रप्रह्लादयोरिव}
 
 
 \twolineshloka
-{कगदाभिः परिघैश्चैव राक्षसो जघ्निवान्कपिम्}
-{कपिश्च जघ्निवान्रः सस्कन्धविटपैर्द्रुमैः}
+{गदाभिः परिघैश्चैव राक्षसो जघ्निवान्कपिम्}
+{कपिश्च जघ्निवान्रक्षः सस्कन्धविटपैर्द्रुमैः}
 
 
 \twolineshloka
@@ -2860,7 +2860,7 @@
 
 
 \twolineshloka
-{तथ्त्युक्त्वा युतौ वीरौ रावणं दूषाणानुजौ}
+{तथेत्युक्त्वा युतौ वीरौ रावणं दूषाणानुजौ}
 {कुम्भकर्णं पुरस्कृत्य तूर्णं निर्ययतुः पुरात्}
 
 
@@ -2873,7 +2873,7 @@
 
 \twolineshloka
 {ततो निर्याय स्वपुरात्कुम्भकर्णः सहानुगः}
-{अपश्यत्कपिसैन्यं रतज्जितकाश्यग्रतः स्थितम्}
+{अपश्यत्कपिसैन्यं तज्जितकाश्यग्रतः स्थितम्}
 
 
 \twolineshloka
@@ -2917,7 +2917,7 @@
 
 
 \twolineshloka
-{स महात्मा महावेगः कुम्भकर्णस् मूर्धनि}
+{स महात्मा महावेगः कुम्भकर्णस्य मूर्धनि}
 {बिभेद सालं सुग्रीवो न चैवाव्यथयत्कपिः}
 
 
@@ -2957,8 +2957,8 @@
 
 
 \twolineshloka
-{तानप्यस् भुजान्सर्वान्प्रगृहीतशिलायुधान्}
-{क्षुरैश्चिच्छेदलघ्वस्त्रं सौमित्रिः प्रतिदर्शयन्}
+{तानप्यस्य भुजान्सर्वान्प्रगृहीतशिलायुधान्}
+{क्षुरैश्चिच्छेद लघ्वस्त्रं सौमित्रिः प्रतिदर्शयन्}
 
 
 \twolineshloka
@@ -2988,7 +2988,7 @@
 
 \twolineshloka
 {ततः सुतुमुलं युद्धमभवद्रोमहर्षणम्}
-{दूषणानुजयोः पार्थ लक्ष्मणस् च धीमतः}
+{दूषणानुजयोः पार्थ लक्ष्मणस्य च धीमतः}
 
 
 \twolineshloka
@@ -3034,7 +3034,7 @@
 
 
 \twolineshloka
-{पुत्रमिनद्रजितं वीरं रावणः प्रत्यभाषत}
+{पुत्रमिन्द्रजितं वीरं रावणः प्रत्यभाषत}
 {जहिरामममित्रघ्न सुग्रीवं च सलक्ष्मणम्}
 
 
@@ -3159,7 +3159,7 @@
 
 
 \twolineshloka
-{तौ शरैरर्दितौ वीरौ भ्रारौ रामलक्ष्मणौ}
+{तौ शरैरर्दितौ वीरौ भ्रातरौ रामलक्ष्मणौ}
 {पेततुर्गगनाद्भूमिं सूर्याचन्द्रमसाविव}
 
 
@@ -3187,7 +3187,7 @@
 
 \twolineshloka
 {सुषेणमैन्दद्विविदैः कुमुदेनाङ्गदेन च}
-{हनुमननीलतारैश्च नलेन च कपीश्वरः}
+{हनुमम्नीलतारैश्च नलेन च कपीश्वरः}
 
 
 \twolineshloka
@@ -3201,8 +3201,8 @@
 
 
 \twolineshloka
-{तौ लब्धसञ्ज्ञौ नृवरौ विशल्यावुदतिष्ठताम्}
-{उभौ गतक्लमौ चास्तां णेनैतौ महारथौ}
+{तौ लब्धसंज्ञौ नृवरौ विशल्यावुदतिष्ठताम्}
+{उभौ गतक्लमौ चाऽऽस्तां क्षणेनैतौ महारथौ}
 
 
 \twolineshloka
@@ -3211,8 +3211,8 @@
 
 
 \twolineshloka
-{अयमम्भो गृहीत्वातु राजराजस् शासनात्}
-{गुह्कोऽभ्यागतः श्लेतात्त्वत्सकाशमरिन्दम}
+{अयमम्भो गृहीत्वातु राजराजस्य शासनात्}
+{गुह्यकोऽभ्यागतः श्वेतात्त्वत्सकाशमरिन्दम}
 
 
 \twolineshloka
@@ -3296,28 +3296,29 @@
 
 
 \twolineshloka
-{तं हत्वासूतमप्यस्त्रैर्जघान बलिनंवरः}
+{तं हत्वा सूतमप्यस्त्रैर्जघान बलिनां वरः}
 {लङ्कां प्रवेशयामासुस्तं रथं वाजिनस्तदा}
 
 
-\twolineshloka
+\threelineshloka
 {ददर्श रावणस्तं च रथं पुत्रविनाकृतम्}
 {स पुत्रं निहतं श्रुत्वा त्रासात्सभ्रान्तमानसः}
-
-
-% Check verse!
-रावणः शोकमोहार्तो वैदेहीं हन्तुमुद्यतः
-ङ्गमादाय दुष्टात्मा जवेनाभिपपात ह
+{रावणः शोकमोहार्तो वैदेहीं हन्तुमुद्यतः}
 
 
 \twolineshloka
-{तं दृष्ट्वातस्य दुर्बुद्देरविन्ध्यः पापनिश्चयम्}
+{अशोकवनिकास्थां तां रामदर्शनलालसाम्}
+{खड्गमादाय दुष्टात्मा जवेनाभिपपात ह}
+
+
+\twolineshloka
+{तं दृष्ट्वा तस्य दुर्बुद्धेरविन्ध्यः पापनिश्चयम्}
 {शमयामास सङ्क्रुद्धं श्रूयतां येन हेतुना}
 
 
 \twolineshloka
-{महाराज्येस्थितो दीप्ते न स्त्रियं हन्तुमर्हसि}
-{हतैवैषा यदा स्त्री च कबन्धनस्था च ते वशे}
+{महाराज्ये स्थितो दीप्ते न स्त्रियं हन्तुमर्हसि}
+{हतैवैषा यदा स्त्री च बन्धनस्था च ते वशे}
 
 
 \twolineshloka
@@ -3383,7 +3384,7 @@
 
 
 \twolineshloka
-{कृत्वा रामस् रूपाणि लक्ष्मणस्य च भारत}
+{कृत्वा रामस्य रूपाणि लक्ष्मणस्य च भारत}
 {अभिदुद्राव रामं च लक्ष्मणं च दशाननः}
 
 
@@ -3393,7 +3394,7 @@
 
 
 \twolineshloka
-{तां दृष्ट्वाराक्षसेन्द्रस् मायामिक्ष्वाकुनन्दनः}
+{तां दृष्ट्वा राक्षसेन्द्रस्य मायामिक्ष्वाकुनन्दनः}
 {उवाच रामः सौमित्रिमसभ्रान्तो बृहद्वचः}
 
 
@@ -3430,7 +3431,7 @@
 
 
 \twolineshloka
-{नेयं माया नरव्याघ्ररावणस् दुरात्मनः}
+{नेयं माया नरव्याघ्र रावणस्य दुरात्मनः}
 {तदातिष्ठ रथंशीघ्रमिमसैन्द्रं महाद्युते}
 
 
@@ -3445,7 +3446,7 @@
 
 
 \twolineshloka
-{[दशकन्धरराजसून्वोस्तथा युद्धमभून्महत्}
+{दशकन्धरराजसून्वोस्तथा युद्धमभून्महत्}
 {अलब्धोपममन्यत्रतयोरेव तथाऽभवत्}
 
 
@@ -3511,7 +3512,7 @@
 
 
 \twolineshloka
-{शरीरधातवो ह्यस् मासं रुधिरमेव च}
+{शरीरधातवो ह्यस्य मासं रुधिरमेव च}
 {नेशुर्ब्रह्मास्त्रनिर्दग्दा न च भस्माप्यदृश्यत}
 
 
@@ -3523,7 +3524,7 @@
 
 
 \twolineshloka
-{स हत्वा रावयणं क्षुद्रं राक्षसेनद्रं सुरद्विषम्}
+{स हत्वा रावणं क्षुद्रं राक्षसेन्द्रं सुरद्विषम्}
 {बभूव हृष्टः ससुहृद्रामः सौमित्रिणा सह}
 
 
@@ -3573,7 +3574,7 @@
 
 
 \threelineshloka
-{गच्छ वैदेहि मुक्ता त्वं यत्कार्यं तनमया कृतम्}
+{गच्छ वैदेहि मुक्ता त्वं यत्कार्यं तन्मया कृतम्}
 {मामासाद्यपतिं भद्रे न त्वं राक्षसवेश्मनि}
 {जरां व्रजेथा इति मे निहतोऽसौ निशाचरः}
 
@@ -3697,7 +3698,7 @@
 
 
 \twolineshloka
-{यदि ह्यकामामासेवेत्स्तरियमन्यामपि ध्रुवम्}
+{यदि ह्यकामामासेवेत्स्त्रियमन्यामपि ध्रुवम्}
 {शतधाऽस्य फलेन्मूर्धा इत्युक्तः सोभवत्पुरा}
 
 
@@ -3716,7 +3717,7 @@
 
 
 \twolineshloka
-{अभिवादयेत्वां राजेन्द्र यदि त्वं जनको मम}
+{अभिवादये त्वां राजेन्द्र यदि त्वं जनको मम}
 {गमिष्यामि पुरीं रम्यामयोध्यां शासनात्तव}
 
 \uvacha{मार्कण्डेय उवाच}
@@ -3779,7 +3780,7 @@
 
 
 \twolineshloka
-{सदेवासुरगनधर्वा यक्षराक्षसपन्नगाः}
+{सदेवासुरगन्धर्वा यक्षराक्षसपन्नगाः}
 {कथयिष्यन्ति लोकास्त्वां यावद्भूमिर्धरिष्यति}
 
 
@@ -3918,7 +3919,7 @@
 
 \twolineshloka
 {सहायवति सर्वार्थाः सतिष्ठन्तीह सर्वशः}
-{किन्नु तस्याजितं सङ्ख्ये यस् भ्राता धनञ्जयः}
+{किन्नु तस्याजितं सङ्ख्ये यस्य भ्राता धनञ्जयः}
 
 
 \twolineshloka
@@ -3952,7 +3953,7 @@
 
 
 \twolineshloka
-{यस् शाखामृगामित्राण्यृक्षाः कालमुखास्तथा}
+{यस्य शाखामृगामित्राण्यृक्षाः कालमुखास्तथा}
 {जात्यन्तरगता राजन्नेतद्बुद्ध्याऽनुचिन्तय}
 
 
