--- a/mulam/agni-puranam/ramavatara-varnanam.tex
+++ b/mulam/agni-puranam/ramavatara-varnanam.tex
@@ -9,7 +9,7 @@
 
 \storymeta
 
-sect{पञ्चमोऽध्यायः - बाल-काण्ड-वर्णनम्}
+\sect{पञ्चमोऽध्यायः - बाल-काण्ड-वर्णनम्}
 
 \uvacha{अग्निरुवाच}
 \twolineshloka
