--- a/mulam/ramayana-ratnakara-mulam.tex
+++ b/mulam/ramayana-ratnakara-mulam.tex
@@ -49,6 +49,7 @@
     \input{adhyatma-ramayanam/RamaHrdayam.tex}
     \input{adhyatma-ramayanam/HanumatSitaSamvada.tex}
     \input{agni-puranam/ramavatara-varnanam.tex}
+    \input{kurma-puranam/ikshvaku-vamsha-varnanam.tex}
     \input{valmiki-ramayanam/NamaRamayanam.tex}
     \part{रामायणान्तर्गताः कथाः}
     \input{devi-bhagavatam/VedavatiCharitram.tex}
